# perf-linter

./: .eslintrc.cjs  .gitignore  CONTRIBUTING.md  LICENSE  README-pt.md  README.md  SECURITY.md  TODO.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/: weekly-audit-report.md
.github/DISCUSSION_TEMPLATE/: community-check-in.md
.github/ISSUE_TEMPLATE/: boa-primeira-contribuicao.md  false-positive.md  feature-idea.md  performance-heuristic.md
docs/: benchmarking.md  rust-core-improvements.md  typed-analyzer-setup.md
docs/changelog/: 0.4.0.md  0.5.0.md
docs/community/: maintenance.md
docs/migrations/: monorepo.md  node-services.md  react.md  vue.md
docs/rules/: detect-unnecessary-rerenders.md  no-expensive-computations-in-render.md  no-expensive-split-replace.md  no-heavy-bundle-imports.md  no-quadratic-complexity.md  no-redos-regex.md  no-unhandled-promises.md  no-unstable-inline-props.md  no-unstable-usememo-deps.md  prefer-array-some.md  prefer-for-of.md  prefer-object-hasown.md  prefer-promise-all-settled.md  vue-no-expensive-computed.md  vue-no-inefficient-watchers.md  vue-optimize-reactivity.md
rust/perf-linter-core/: Cargo.toml
rust/perf-linter-core/src/: bridge.rs  cache.rs  lib.rs  main.rs  parser.rs
rust/perf-linter-core/src/analyzer/: extract.rs  metadata.rs
scripts/: benchmark-suite.ts  benchmark.ts
src/: index.ts  rust-bridge.ts
src/analysis/: cross-file-analyzer.ts  domain.ts  module-index.ts  shared.ts  usage-index.ts
src/analyzer/: cross-file.ts
src/cli/: run-eslint-with-cache.ts  (+1 more)
(+78 files in other folders)
